# cli

./: .gitignore  .grype.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  gitlab-ci-component.yml  pyproject.toml
.cra/: control-catalog.yaml  cvd-policy.yaml  evaluation-log.yaml  risk-catalog.yaml  update-mechanism.yaml  vulnerability-policy.yaml
.devcontainer/: devcontainer.json  setup.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  grype-watchlist.yaml  grype.yaml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  demo.yml  recovery-finalize.yml  retro-sign.yml
cra_evidence_cli/: __init__.py  __main__.py  ci_detect.py  cli.py  client.py  config.py  display.py  exceptions.py  ikconfig.py  repo_config.py  sbom_generator.py  sbom_signer.py  sbomqs_check.py  styles.py
cra_evidence_cli/assessment/: __init__.py  config.py  detect.py  gate.py  matrix.py  requirements.py  select.py  templates.py
cra_evidence_cli/commands/: __init__.py  assessment.py  check.py  code_check.py  compare.py  components.py  config_check.py  db.py  diagram.py  distributor.py  draft.py  egress.py  eol.py  evidence.py  export.py  gemara.py  maturity.py  profile.py  release.py  scan.py  (+5 more)
docs/: README.md  account-commands.md  ci-cd.md  demo-config-check.tape  demo-eol-check.tape  demo-scaffold.tape  demo.tape  installation.md  local-commands.md  releasing.md  troubleshooting.md
scripts/: check-dhi-base.sh  check-image-gate.sh  check_dist.py  generate_rule_docs.py  install-crane.sh  prepare_release_dist.py  reconcile_release_sboms.sh  recover_pypi_attestations.py  registry-crane.sh  registry-inspect.sh  rulepack_gate.sh  validate_release_sboms.py  verify_pypi_release.py
tests/: __init__.py  conftest.py  rulepack_versions.json  test_assessment.py  test_check_dhi_base.py  test_check_multi_output.py  test_ci_detect.py  test_ci_wrappers.py  test_client.py  test_client_retry.py  test_code_check_command.py  test_compare_command.py  test_components_command.py  test_config.py  test_config_check_command.py  test_csaf_schema.py  test_db_update.py  test_diagram_command.py  test_disclaimer.py  test_doc_type_parity.py  test_draft_command.py  test_draft_scaffolds.py  test_draft_threat_diagram.py  test_egress_command.py  test_eol_command.py  test_evidence_checker.py  test_evidence_command.py  test_exceptions.py  test_gemara_template_offline.py  test_local_annotations.py  test_local_check.py  test_local_config_audit.py  test_local_egress.py  test_local_eol.py  test_local_mermaid.py  test_local_policy.py  test_local_secrets.py  test_local_securitytxt.py  test_local_vex.py  test_osv_fallback.py  (+23 more)
(+143 files in other folders)
